// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page should be render step Login 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Acesse sua conta Toro:
          </h1>
          <form
            class="sc-iCoGMd dNxoh"
          >
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                name="mail"
                placeholder="E-mail"
                required=""
                type="email"
                value=""
              />
            </div>
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                maxlength="20"
                minlength="6"
                name="password"
                placeholder="Senha"
                required=""
                type="password"
                value=""
              />
            </div>
            <p>
              Não é cadastrado? Faça seu cadastro 
              <strong>
                aqui.
              </strong>
            </p>
            <button
              class="sc-dlnjwi xZsCq"
              type="submit"
              width="300px"
            >
              Entrar
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Acesse sua conta Toro:
        </h1>
        <form
          class="sc-iCoGMd dNxoh"
        >
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              name="mail"
              placeholder="E-mail"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              maxlength="20"
              minlength="6"
              name="password"
              placeholder="Senha"
              required=""
              type="password"
              value=""
            />
          </div>
          <p>
            Não é cadastrado? Faça seu cadastro 
            <strong>
              aqui.
            </strong>
          </p>
          <button
            class="sc-dlnjwi xZsCq"
            type="submit"
            width="300px"
          >
            Entrar
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login page should be render step Login to Register 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Cadastre-se
          </h1>
          <form
            class="sc-iCoGMd dNxoh"
          >
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                name="name"
                placeholder="Nome"
                required=""
                type="string"
                value=""
              />
            </div>
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                name="mail"
                placeholder="E-mail"
                required=""
                type="email"
                value=""
              />
            </div>
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                maxlength="20"
                minlength="6"
                name="password"
                placeholder="Senha"
                required=""
                type="password"
                value=""
              />
            </div>
            <p>
              Já é cadastrado? Faça seu login 
              <strong>
                aqui.
              </strong>
            </p>
            <button
              class="sc-dlnjwi xZsCq"
              type="submit"
              width="300px"
            >
              Continue
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Cadastre-se
        </h1>
        <form
          class="sc-iCoGMd dNxoh"
        >
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              name="name"
              placeholder="Nome"
              required=""
              type="string"
              value=""
            />
          </div>
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              name="mail"
              placeholder="E-mail"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              maxlength="20"
              minlength="6"
              name="password"
              placeholder="Senha"
              required=""
              type="password"
              value=""
            />
          </div>
          <p>
            Já é cadastrado? Faça seu login 
            <strong>
              aqui.
            </strong>
          </p>
          <button
            class="sc-dlnjwi xZsCq"
            type="submit"
            width="300px"
          >
            Continue
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login page should be render step login to Register to Login 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Acesse sua conta Toro:
          </h1>
          <form
            class="sc-iCoGMd dNxoh"
          >
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                name="mail"
                placeholder="E-mail"
                required=""
                type="email"
                value=""
              />
            </div>
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                maxlength="20"
                minlength="6"
                name="password"
                placeholder="Senha"
                required=""
                type="password"
                value=""
              />
            </div>
            <p>
              Não é cadastrado? Faça seu cadastro 
              <strong>
                aqui.
              </strong>
            </p>
            <button
              class="sc-dlnjwi xZsCq"
              type="submit"
              width="300px"
            >
              Entrar
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Acesse sua conta Toro:
        </h1>
        <form
          class="sc-iCoGMd dNxoh"
        >
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              name="mail"
              placeholder="E-mail"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              maxlength="20"
              minlength="6"
              name="password"
              placeholder="Senha"
              required=""
              type="password"
              value=""
            />
          </div>
          <p>
            Não é cadastrado? Faça seu cadastro 
            <strong>
              aqui.
            </strong>
          </p>
          <button
            class="sc-dlnjwi xZsCq"
            type="submit"
            width="300px"
          >
            Entrar
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login page should be render with error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Acesse sua conta Toro:
          </h1>
          <form
            class="sc-iCoGMd dNxoh"
          >
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                name="mail"
                placeholder="E-mail"
                required=""
                type="email"
                value=""
              />
            </div>
            <div
              class="sc-bdnxRM eaWVJw"
            >
              <input
                class="sc-gtsrHT kyisFr"
                maxlength="20"
                minlength="6"
                name="password"
                placeholder="Senha"
                required=""
                type="password"
                value=""
              />
            </div>
            <p>
              Não é cadastrado? Faça seu cadastro 
              <strong>
                aqui.
              </strong>
            </p>
            <button
              class="sc-dlnjwi xZsCq"
              type="submit"
              width="300px"
            >
              Entrar
            </button>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Acesse sua conta Toro:
        </h1>
        <form
          class="sc-iCoGMd dNxoh"
        >
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              name="mail"
              placeholder="E-mail"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="sc-bdnxRM eaWVJw"
          >
            <input
              class="sc-gtsrHT kyisFr"
              maxlength="20"
              minlength="6"
              name="password"
              placeholder="Senha"
              required=""
              type="password"
              value=""
            />
          </div>
          <p>
            Não é cadastrado? Faça seu cadastro 
            <strong>
              aqui.
            </strong>
          </p>
          <button
            class="sc-dlnjwi xZsCq"
            type="submit"
            width="300px"
          >
            Entrar
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login page should be render with loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Acesse sua conta Toro:
          </h1>
          <div
            class="sc-hKFxyN iKaQIC"
          >
            <div
              class="sc-eCApnc dCsrWr"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Acesse sua conta Toro:
        </h1>
        <div
          class="sc-hKFxyN iKaQIC"
        >
          <div
            class="sc-eCApnc dCsrWr"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login page should be submit form in step Login 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Acesse sua conta Toro:
          </h1>
          <div
            class="sc-hKFxyN iKaQIC"
          >
            <div
              class="sc-eCApnc dCsrWr"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Acesse sua conta Toro:
        </h1>
        <div
          class="sc-hKFxyN iKaQIC"
        >
          <div
            class="sc-eCApnc dCsrWr"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login page should be submit form in step Register 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-jSFjdj jvsuTt"
      >
        <div
          class="sc-gKAaRy ftNFfT"
        >
          <img
            alt="logo"
            src="logo.png"
          />
          <h1>
            Cadastre-se
          </h1>
          <div
            class="sc-hKFxyN iKaQIC"
          >
            <div
              class="sc-eCApnc dCsrWr"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-jSFjdj jvsuTt"
    >
      <div
        class="sc-gKAaRy ftNFfT"
      >
        <img
          alt="logo"
          src="logo.png"
        />
        <h1>
          Cadastre-se
        </h1>
        <div
          class="sc-hKFxyN iKaQIC"
        >
          <div
            class="sc-eCApnc dCsrWr"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
